--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
 	<meta name="description" content="">
+	<meta name="theme-color" content="#4CAF50">
 
 	<!-- STYLESHEET CSS FILES -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -20,7 +21,8 @@
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<link rel="manifest" href="manifest.json" />
+	<link rel="manifest" href="js/manifest.json">
+
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
@@ -354,6 +356,7 @@
 <script src="js/wow.min.js"></script>
 <script src="js/custom.js"></script>
 <script src="js/scroll.js"></script>
+<script src="js/app.js"></script>
 
 </body>
 </html>
